# A-project-full-of-errors

./: .gitmessage.txt  README.md  pyproject.toml
apfoe/: pyproject.toml
apfoe/config/settings/: base.py  development.py  production.py
apfoe/config/urls/: development.py  production.py
django_mini_project/: pyproject.toml
django_mini_project/accounts/: admin.py  models.py  serializers.py  urls.py  views.py
django_mini_project/accounts/migrations/: 0001_initial.py  0002_alter_account_balance.py  0002_initial.py
django_mini_project/config/settings/: base.py  dev.py
django_mini_project/config/urls/: urls_dev.py  urls_prod.py
django_mini_project/templates/: base.html  login.html  profile.html
django_mini_project/transaction_history/: apps.py  models.py
django_mini_project/transaction_history/migrations/: 0001_initial.py
django_mini_project/transactions/: models.py
django_mini_project/users/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
django_mini_project/users/migrations/: 0001_initial.py  0002_user_groups_user_is_superuser_user_user_permissions_and_more.py
django_mini_project/users/templates/: base.html  login.html  profile.html  register.html  signup.html
django_mini_project/users/templates/users/: edit_profile.html  profile.html
