[project]
name = "apfoe"
version = "0.1.0"
description = ""
authors = [
    {name = "hanyul-jeong",email = "hanyul0417@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.1.7,<6.0.0)"
]

[tool.poetry]
packages = [{include = "apfoe", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
